# energy2-RESEARCH-DUPE2

./: .env.example  .gitignore  railway.json  ruff.toml
aurelius/: README.md  __init__.py  cli.py  cli_constraint.py  database.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
aurelius/api/: app.py
aurelius/backtesting/: __init__.py  baselines.py  engine.py  evaluator.py  splitter.py
aurelius/benchmarks/: __init__.py  adaptive_ewma_backtest.py  borderline_osotss_backtest.py  canonical_backtests.py  constraint_runner.py  economics.py  forecasted_mcs.py  gpu_routing_backtest.py  mcs_ablation.py  multi_seed_stochastic_audit.py  packing.py  per_workload.py  phase_c.py  realism_audit.py  report.py  srtf_backtest.py  srtf_contention_backtest.py  srtf_serving_backtest.py  stochastic_safety_margin_backtest.py
aurelius/connectors/: __init__.py  base.py  dcgm.py  kubernetes.py  metric_mapping.py  otel.py  prometheus.py  ray_serve.py  topology.py  triton.py  vllm.py
aurelius/constraints/: __init__.py  classifier.py  cost_model.py  energy_adapter.py  engine.py  frontier_integration.py  observability.py
aurelius/data/: persistence.py
aurelius/database/: __init__.py  store.py
aurelius/datasets/: __init__.py  calibration.py  canonical.py  signal_matrix.py
aurelius/environment/: __init__.py  action_registry.py  actions.py  calibration_bridge.py  candidate_search.py  canonical.py  controller.py  cost_model.py  data_tier.py  decision_diagnostics.py  deferrable.py  electricity.py  external_sim_validation.py  fidelity_manifest.py  fleet_plane_v2026.py  forecast_state.py  forecast_trajectory.py  forecasting.py  gpu_assignment.py  kv_cache.py  kv_precision.py  n2.py  optimizer_adapter.py  pd_disaggregation.py  physics_guided_candidates.py  physics_guided_planner.py  prefill_decode.py  price_series.py  production_baselines.py  request_state.py  roofline.py  roofline_actions.py  roofline_external.py  scenario_forecaster.py  schemas.py  search_planner.py  search_regret_auditor.py  serving_plane.py  simulation_clock.py  state_validation.py  (+10 more)
(+1250 files in other folders)
